--- a/02-SB-Logging-App/src/main/resources/application.properties
+++ b/02-SB-Logging-App/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=8081
+
+
 #logging.level.root=DEBUG
-logging.file.name=app.log
-logging.pattern.rolling-file-name=app-%d{yyyy-MM-dd}.%i.log
-logging.file.max-size=1MB
-logging.file.max-history=30
-logging.file.total-size-cap=10MB
+#logging.file.name=app.log
+#logging.pattern.rolling-file-name=app-%d{yyyy-MM-dd}.%i.log
+#logging.file.max-size=1MB
+#logging.file.max-history=30
+#logging.file.total-size-cap=10MB
