--- a/04-REPORTS-API_Mini-Project_02/src/main/resources/application.yml
+++ b/04-REPORTS-API_Mini-Project_02/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9090 
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
     url: jdbc:mysql://localhost:3306/rahuldatabase
